Add 'xtc bundle': merge compiled modules into a single multi-module .xtc (#525)
Co-authored-by: Cameron Purdy <699204+cpurdy@users.noreply.github.com>