@@ -4,12 +4,24 @@ package org.xvm.asm;
 import java.io.File;
 import java.io.IOException;
 
-import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 
+import org.xvm.asm.FileStructure.FileInfo;
+
+import org.xvm.asm.constants.ModuleConstant;
+
+import static org.xvm.util.Handy.BINARY_EXTENSION;
+import static org.xvm.util.Handy.hasBinaryExtension;
+import static org.xvm.util.Handy.removeSourceExtension;
+import static org.xvm.util.Handy.resolveFile;
 
 /**
- * A simple ModuleRepository for a single file with a single module.
+ * A simple ModuleRepository for a single file. The file is most commonly a single-module .xtc, but
+ * an .xtc file is a module container and may hold multiple modules (a "bundle"), in which case
+ * every real (non-fingerprint) module in the container is exposed by this repository.
  */
 public class FileRepository
         implements ModuleRepository {
@@ -18,25 +30,15 @@ public class FileRepository
     /**
      * Construct a single-file ModuleRepository.
      *
-     * @param file       the file that contains the single module
-     * @param fReadOnly  true to make the repository "read-only"
+     * @param file      the file that contains the module(s)
+     * @param readOnly  true to make the repository "read-only"
      */
-    public FileRepository(File file, boolean fReadOnly) {
+    public FileRepository(File file, boolean readOnly) {
         assert file != null && !file.isDirectory();
 
-        String sName = file.getName();
-        if (!sName.endsWith(".xtc")) {
-            if (sName.endsWith(".x")) {
-                file = new File(file.getParentFile(), sName.substring(0, sName.lastIndexOf('.')) + ".xtc");
-            } else {
-                file = new File(file.getParentFile(), sName + ".xtc");
-            }
-        }
-
-        this.file = file;
-        this.fRO = fReadOnly;
+        this.file     = moduleFile(file);
+        this.readOnly = readOnly;
     }
-
 
     // ----- accessors -----------------------------------------------------------------------------
 
@@ -51,62 +53,138 @@ public class FileRepository
      * @return true iff read-only
      */
     public boolean isReadOnly() {
-        return fRO;
+        return readOnly;
     }
-
 
     // ----- ModuleRepository API ------------------------------------------------------------------
 
     @Override
-    public Set<String> getModuleNames() {
-        checkCache();
-        return file.exists() && name != null ? Collections.singleton(name) : Collections.emptySet();
+    public synchronized Set<String> getModuleNames() {
+        return validateCache() ? cachedVersionsByName.keySet() : Set.of();
     }
 
     @Override
-    public VersionTree<Boolean> getAvailableVersions(String sModule) {
-        checkCache();
-        return !err && name.equals(sModule) ? versions : null;
+    public synchronized VersionTree<Boolean> getAvailableVersions(String sModule) {
+        return validateCache() ? cachedVersionsByName.get(sModule) : null;
     }
 
     @Override
-    public ModuleStructure loadModule(String sModule) {
-        ModuleStructure module = checkCache();
-        if (sModule.equals(name)) {
-            return module == null ? ensureModule() : module;
+    public synchronized ModuleStructure loadModule(String sModule) {
+        ModuleStructure module = null;
+        if (getModuleNames().contains(sModule) && ensureFileStructure()) {
+            if (cachedModuleStructures != null) {
+                module = cachedModuleStructures.get(moduleId(sModule));
+            }
+            if (module == null) {
+                module = cachedFileStructure.getChild(sModule);
+                if (requiresSeparation(module)) {
+                    module = forceSeparation(moduleId(sModule), module);
+                }
+            }
         }
-        return null;
+        return module;
     }
 
     @Override
-    public void storeModule(ModuleStructure module)
+    public synchronized ModuleStructure loadModule(String sModule, Version version, boolean fExact) {
+        // verify that the module name is known
+        if (!getModuleNames().contains(sModule)) {
+            return null;
+        }
+
+        if (version == null) {
+            return loadModule(sModule);
+        }
+
+        // verify that the module name has known versions
+        VersionTree<Boolean> versions = getAvailableVersions(sModule);
+        if (versions.isEmpty()) {
+            return null;
+        }
+
+        // check the module cache
+        ModuleConstant idModule = moduleId(sModule, version);
+        if (cachedModuleStructures != null) {
+            ModuleStructure module = cachedModuleStructures.get(idModule);
+            if (module != null) {
+                return module;
+            }
+        }
+
+        // verify that a desired version exists
+        Version selectedVersion = versions.selectVersion(version, fExact);
+        if (selectedVersion == null) {
+            return null;
+        }
+
+        // re-check the module cache (in case the selected version differs from the first check)
+        if (!selectedVersion.equals(version)) {
+            idModule = moduleId(sModule, selectedVersion);
+            if (cachedModuleStructures != null) {
+                ModuleStructure module = cachedModuleStructures.get(idModule);
+                if (module != null) {
+                    return module;
+                }
+            }
+        }
+
+        // obtain the selected version of the ModuleStructure from the FileStructure
+        if (!ensureFileStructure()) {
+            return null;
+        }
+        ModuleStructure module = cachedFileStructure.getChild(idModule);
+        if (module == null) {
+            // the FileStructure can bundle any number of versions of a module as siblings under the
+            // name of the module
+            module = loadModule(sModule).extractVersion(selectedVersion);
+            ensureModuleCache().put(idModule, module);
+        }
+
+        if (requiresSeparation(module)) {
+            module = forceSeparation(idModule, module);
+        }
+        return module;
+    }
+
+    @Override
+    public synchronized void storeModule(ModuleStructure module)
             throws IOException {
-        if (fRO) {
+        if (readOnly || file.exists() && !file.isFile()) {
             throw new IOException("repository is read-only: " + this);
         }
 
-        if (file.exists() && !file.delete()) {
-            err = true;
-            throw new IOException("unable to delete " + file);
-        }
+        String sModule  = module.getName();
+        File   dir      = resolveFile(file).getParentFile();
+        File   workFile = File.createTempFile("tmp." + sModule, ".xtc", dir);
 
+        cachedVersionsByName   = Map.of();
+        cachedFileStructure    = null;
+        cachedModuleStructures = null;
+        cacheOk                = false;
+
+        FileStructure fileStructure = module.getFileStructure();
         try {
-            module.getFileStructure().writeTo(file);
-            err = false;
+            fileStructure.writeTo(workFile);
+            file.delete();
+            if (workFile.renameTo(file)) {
+                cachedVersionsByName   = fileStructure.buildFileInfo().modules();
+                cachedFileStructure    = fileStructure;
+                cacheOk                = true;
+            }
         } catch (IOException e) {
-            err = true;
-            file.delete(); // don't leave a corrupted file; it may prevent the next compilation
             throw new IOException("Error writing module to file: " + file, e);
+        } finally {
+            if (workFile.exists()) {
+                if (!workFile.delete()) {
+                    workFile.deleteOnExit();
+                }
+            }
         }
 
-        this.name      = module.getIdentityConstant().getName();
-        this.versions  = module.getVersions();
         this.timestamp = file.lastModified();
         this.size      = file.length();
-        this.module    = module;
         this.lastScan  = System.currentTimeMillis();
     }
-
 
     // ----- Object methods ------------------------------------------------------------------------
 
@@ -117,110 +195,184 @@ public class FileRepository
 
     @Override
     public boolean equals(Object obj) {
-        if (obj == this || !(obj instanceof FileRepository that)) {
-            return obj == this;
-        }
-
-        return this.file.equals(that.file) &&
-               this.fRO      == that.fRO;
+        return obj == this
+                || obj instanceof FileRepository that
+                && this.file.equals(that.file)
+                && this.readOnly == that.readOnly;
     }
 
     @Override
     public String toString() {
-        return "FileRepository(Path=" + file.toString() + ", RO=" + fRO + ")";
+        return "FileRepository(Path=" + file.toString() + ", RO=" + readOnly + ")";
     }
-
 
     // ----- internal ------------------------------------------------------------------------------
 
     /**
-     * Make sure that the cache is up to date.
+     * Convert a source or extensionless module file name to its compiled module file name.
      *
-     * @return the module, if it is handy, or null if it is not handy
+     * @param file  the module file
+     *
+     * @return the same file if it already names an .xtc file, otherwise the .xtc sibling
      */
-    ModuleStructure checkCache() {
-        if (isCacheValid()) {
-            return module;  // might be null, or might not be
+    private static File moduleFile(File file) {
+        return Optional.of(file.getName())
+                .filter(sName -> !hasBinaryExtension(sName))
+                .map(sName -> file.toPath()
+                        .resolveSibling(removeSourceExtension(sName) + BINARY_EXTENSION)
+                        .toFile())
+                .orElse(file);
+    }
+
+    /**
+     * Make sure that the cache is up to date.
+     */
+    private boolean validateCache() {
+        // assume cache is up-to-date if it has been checked recently; assumption is that activity
+        // comes in bursts; also assume cache is up-to-date if nothing appears to have changed
+        if (System.currentTimeMillis() < lastScan + 60/*ms*/
+                || timestamp == file.lastModified() && size == file.length()) {
+            return cacheOk;
         }
 
-        this.timestamp = file.lastModified();
-        this.size      = file.length();
-        this.err       = false;
+        // cache is not up-to-date; clear whatever was cached before
+        timestamp              = file.lastModified();
+        size                   = file.length();
+        cachedVersionsByName   = Map.of();
+        cachedFileStructure    = null;
+        cachedModuleStructures = null;
+        cacheOk                = false;
+        lastScan               = System.currentTimeMillis();
 
-        ModuleStructure module = tryLoad();
-        if (module == null) {
-            this.name     = null;
-            this.versions = null;
-            this.err      = true;
-        } else {
-            this.name     = module.getIdentityConstant().getName();
-            this.versions = module.getVersions();
+        // load the cache if possible
+        if (file.exists() && file.isFile() && file.canRead()) {
+            // read just the module contents of the FileStructure (not the entire FileStructure)
+            FileInfo info = readFileInfo();
+            if (info != null) {
+                cachedVersionsByName = info.modules();
+                cacheOk              = true;
+            }
         }
+        return cacheOk;
+    }
 
-        this.module   = null;
-        this.lastScan = System.currentTimeMillis();
+    // TODO GG review - do we want to do this?!?
+    private boolean requiresSeparation(ModuleStructure module) {
+        return module != null && !module.isMainModule() && module.getFileStructure() == cachedFileStructure;
+    }
+
+    // TODO GG review - do we want to do this?!?
+    private ModuleStructure forceSeparation(ModuleConstant idModule, ModuleStructure module) {
+        // a non-main module of a multi-module container ("bundle") is served as a detached
+        // copy (memoized), so that every consumer - the linker, the runtime compiler's
+        // fingerprint hoisting, reflection - sees the single-module-file shape it expects
+        module = module.detachedCopy();
+        ensureModuleCache().put(idModule, module);
         return module;
     }
 
     /**
-     * Quick scan to make sure that the cache is still valid.
+     * Verify that the FileStructure is loaded and current, loading or re-loading it if necessary.
      *
-     * @return true if the cache is still good, or false if it needs to be rebuilt
+     * @return true iff the FileStructure is loaded and current
      */
-    private boolean isCacheValid() {
-        // only scan once a second (at the most)
-        if (System.currentTimeMillis() < lastScan + 1000) {
-            return true;
+    private boolean ensureFileStructure() {
+        if (validateCache() && cachedFileStructure == null) {
+            if ((cachedFileStructure = readFileStructure()) == null) {
+                cacheOk = false;
+            }
         }
-
-        if (!file.exists()) {
-            name   = null;
-            module = null;
-            return true;
-        }
-
-        if (name == null || timestamp != file.lastModified() || size != file.length()) {
-            return false;
-        }
-
-        return true;
+        return cacheOk;
     }
 
-    private ModuleStructure ensureModule() {
-        if (err) {
+    /**
+     * @return the FileInfo freshly read from the file system, or `null` on any failure
+     */
+    private FileInfo readFileInfo() {
+        try {
+            return FileStructure.readFileInfo(file);
+        } catch (Exception e) {
+            if (!reportedFileStructureError) {
+                reportedFileStructureError = true;
+                System.out.println("Error loading FileInfo from file: " + file + "; " + e.getMessage());
+            }
             return null;
         }
-
-        if (module == null || module.isModified()) {
-            module = tryLoad();
-        }
-
-        return module;
     }
 
-    private ModuleStructure tryLoad() {
+    /**
+     * @return the FileStructure freshly read from the file system, or `null` on any failure
+     */
+    private FileStructure readFileStructure() {
         try {
-            FileStructure struct = new FileStructure(file);
-            return struct.getModule();
+            return new FileStructure(file);
         } catch (Exception e) {
-            System.out.println("Error loading module from file: " + file + "; " + e.getMessage());
+            if (!reportedFileInfoError) {
+                reportedFileInfoError = true;
+                System.out.println("Error loading FileStructure from file: " + file + "; " + e.getMessage());
+            }
+            return null;
         }
-
-        err = true;
-        return null;
     }
 
+    /**
+     * @param sModule  qualified module name
+     *
+     * @return the corresponding ModuleConstant
+     */
+    private ModuleConstant moduleId(String sModule) {
+        assert ensureFileStructure();
+        return cachedFileStructure.getConstantPool().ensureModuleConstant(sModule);
+    }
+
+    /**
+     * @param sModule  qualified module name
+     * @param version  the module version
+     *
+     * @return the corresponding ModuleConstant
+     */
+    private ModuleConstant moduleId(String sModule, Version version) {
+        assert ensureFileStructure();
+        return cachedFileStructure.getConstantPool().ensureModuleConstant(sModule, version);
+    }
+
+    /**
+     * @return a cache of ModuleStructures that were created or stored by this repository
+     */
+    private Map<ModuleConstant, ModuleStructure> ensureModuleCache() {
+        assert cacheOk;
+        Map<ModuleConstant, ModuleStructure> cache = cachedModuleStructures;
+        if (cache == null) {
+            cachedModuleStructures = cache = new HashMap<>();
+        }
+        return cache;
+    }
 
     // ----- fields --------------------------------------------------------------------------------
 
-    private final File           file;
-    private final boolean        fRO;
+    private final File    file;
+    private final boolean readOnly;
 
-    private String               name;
-    private VersionTree<Boolean> versions;
-    private long                 timestamp;
-    private long                 size;
-    private ModuleStructure      module;
-    private long                 lastScan;
-    private boolean              err;
+    private long    timestamp;
+    private long    size;
+    private long    lastScan;
+    private boolean cacheOk;
+
+    private boolean reportedFileInfoError;
+    private boolean reportedFileStructureError;
+
+    /**
+     * Cached file contents: module names and versions thereof.
+     */
+    private Map<String, VersionTree<Boolean>> cachedVersionsByName = Map.of();
+
+    /**
+     * Cached file contents: the entire FileStructure
+     */
+    private FileStructure cachedFileStructure;
+
+    /**
+     * Cached ModuleStructures.
+     */
+    private Map<ModuleConstant, ModuleStructure> cachedModuleStructures = null;
 }
